<resources>
    <string name="app_name">Santarosaturistica</string>
    <string name="titulo">Santarosa</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="aceptar">Aceptar</string>
    <string name="iniciar">Iniciar session</string>
    <string name="Registrese">Registrese</string>
    <string name="repetirusername">Repetir password</string>
    <string name="repetirpassword">Correo electronico</string>
    <string name="registro">Registro</string>
    <string name="cancelar">Cancelar</string>
    <string name="usuario">Eider Arango Amaya</string>
    <string name="email">eider.a@hotmail.com</string>
    <string name="miperfil">Mi perfil</string>
    <string name="cerrar">Cerrar session</string>
    <string name="informacion_pueblo">Santa Rosa de Osos es un municipio y ciudad de Colombia localizado en la subregión norte del departamento de Antioquia. Limita por el norte
        con los municipios de Yarumal, Angostura y Carolina del Príncipe, por el este con los municipios de  Gómez Plata, y Yolombo.</string>
    <string name="principal">Principal</string>
    <string name="mas_informacion">Mas informacion</string>
    <string name="correo">Correo</string>

    <!--Manejo de los Toasts.-->
    <string name="password_malo">Las contraseñas no coinciden</string>
    <string name="falta_campos">Falta llenar algunos campos</string>
    <string name="usuario_contraseña_incorrectos">Usuario o contraseña incorrectos</string>
    <string name="llenar_todos_campos">Debes llenar todos los campos</string>
    <string name="error_registro">Error en registro</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel1">Hotel1</string>
    <string name="hotel2">Hotel2</string>
    <string name="fragment1">Hotel1</string>
    <string name="fragment2">Hotel2</string>
    <string name="title_activity_hoteles">HotelesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="restaurantes">Restaurantes</string>
    <string name="hoteles">Hoteles</string>
    <string name="turisticos">Sit. turisticos</string>
    <string name="title_activity_contenido">ContenidoActivity</string>
    <string name="parque1">Lleras</string>
    <string name="descrip">PArque para visitar en familia</string>
    <string name="tdireccion">Calle 56a</string>
    <string name="direccion">Calle 56A</string>
    <string name="title_activity_drawe">DraweActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="enlace">Pagina principal</string>
    <string name="comidas">Comidas Típicas</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_drawe_contenido">DraweContenidoActivity</string>
    <string name="title_activity_drawe_lista">DraweListaActivity</string>
    <string name="title_activity_drawe_recetas">DraweRecetasActivity</string>

</resources>
