<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.eider.santarosaturistica.LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:text="@string/titulo"/>
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pueblo"
        android:layout_gravity="center"
        />
    <EditText
        android:id="@+id/eusername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/username"/>
    <EditText
        android:inputType="textPassword"
        android:id="@+id/econtrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/password"/>

    <Button
        android:id="@+id/biniciar"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"/>

    <Button
        android:id="@+id/bregistrar"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/Registrese"/>

</LinearLayout>
